--- a/phase-four/flask-sqlalchemy/Pipfile
+++ b/phase-four/flask-sqlalchemy/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 ipdb = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.8"
-python_full_version = "3.8.13"
